--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "markdown-wasm": "^1.2.0",
     "next": "^13.5.4",
     "next-contentlayer": "^0.3.4",
+    "pnpm": "^8.15.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-wrap-balancer": "^1.1.0",
