--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "pnpm": "^8.15.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-gallery": "^1.3.0",
+    "react-slick": "^0.30.2",
     "react-wrap-balancer": "^1.1.0",
     "rehype-autolink-headings": "^7.0.0",
     "rehype-pretty-code": "^0.10.1",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "3.0.1",
+    "slick-carousel": "^1.8.1",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
@@ -35,6 +38,8 @@
     "@types/node": "^20.8.4",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
+    "@types/react-image-gallery": "^1.2.4",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "postcss-nesting": "^12.0.1",
