--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "fmt": "pnpm rome check . --apply-unsafe && pnpm rome format . --write"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "@mui/material-nextjs": "^5.15.11",
     "@next/font": "^13.5.4",
     "@next/mdx": "^13.5.4",
     "@upstash/redis": "^1.23.3",
@@ -21,14 +27,14 @@
     "pnpm": "^8.15.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-image-gallery": "^1.3.0",
-    "react-slick": "^0.30.2",
+    "react-image-lightbox": "^5.1.4",
+    "react-simple-image-viewer": "^1.2.2",
     "react-wrap-balancer": "^1.1.0",
     "rehype-autolink-headings": "^7.0.0",
     "rehype-pretty-code": "^0.10.1",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "3.0.1",
-    "slick-carousel": "^1.8.1",
+    "shiki": "^1.3.0",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
