chore(dependencies): update package-lock.json and add license information

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,10 +8,8 @@
             "command": "npm run dev",
             "name": "Run dev",
             "request": "launch",
-            "type": "node-terminal"
+            "type": "node-terminal",
+            "envFile": "${workspaceFolder}/.env"
         },
-        {
-
-        }
     ]
 }
